Use ZGC for garbage collection (#2951)